--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+.text-big {
+  @apply text-4xl md:text-5xl xl:text-[50px] xl:leading-[57px] tracking-[-2px] font-bold;
+}
+
 @layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
+  }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
@@ -46,14 +58,5 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 346.8 77.2% 49.8%;
-  }
-}
- 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
   }
 }
