--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+.h2 {
+  @apply text-4xl font-bold;
+}
+
+.h3 {
+  @apply text-2xl md:text-3xl font-bold;
+}
+
+.h4 {
+  @apply text-[23px] font-semibold;
+}
+
+.subtitle {
+  @apply text-muted-foreground text-lg font-light;
+}
+
 .text-big {
   @apply text-[35px] leading-[37px] sm:text-5xl xl:text-[50px] xl:leading-[57px] tracking-[-2px] font-bold;
 }
