--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,8 @@
 }
 
 .swiper-horizontal > .section-pagination-bullets .swiper-pagination-bullet,
-.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
   @apply bg-primary;
 }
 
@@ -59,7 +60,7 @@
     --ring: -7 99% 65%;
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 237 22% 20%;
     --foreground: 0 0% 95%;
@@ -80,5 +81,125 @@
     --border: 237 22% 23%;
     --input: 237 22% 23%;
     --ring: -7 99% 65%;
+  }
+}
+
+.rotating-geometrics {
+  animation: orbit 16s ease-in-out infinite;
+  transform: translateZ(0);
+}
+
+.rotating-geometrics > * {
+  animation: rotate 16s ease-in-out infinite;
+  transform-box: fill-box;
+  transform-origin: center;
+  transform: translateZ(0);
+}
+
+@keyframes orbit {
+  0% {
+    transform: rotate(0deg);
+  }
+  8% {
+    transform: rotate(-5deg);
+  }
+  18.66% {
+    transform: rotate(98deg);
+  }
+  25% {
+    transform: rotate(90deg);
+  }
+  26.5% {
+    transform: rotate(90deg);
+  }
+  33% {
+    transform: rotate(85deg);
+  }
+  41.666% {
+    transform: rotate(188deg);
+  }
+  48% {
+    transform: rotate(180deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  58% {
+    transform: rotate(175deg);
+  }
+  66.666% {
+    transform: rotate(278deg);
+  }
+  73% {
+    transform: rotate(270deg);
+  }
+  75% {
+    transform: rotate(270deg);
+  }
+  83% {
+    transform: rotate(265deg);
+  }
+  91.666% {
+    transform: rotate(368deg);
+  }
+  98% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  8% {
+    transform: rotate(5deg);
+  }
+  18.66% {
+    transform: rotate(-98deg);
+  }
+  25% {
+    transform: rotate(-90deg);
+  }
+  26.5% {
+    transform: rotate(-90deg);
+  }
+  33% {
+    transform: rotate(-85deg);
+  }
+  41.666% {
+    transform: rotate(8deg);
+  }
+  48% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  58% {
+    transform: rotate(0deg);
+  }
+  66.666% {
+    transform: rotate(0deg);
+  }
+  73% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(0deg);
+  }
+  83% {
+    transform: rotate(0deg);
+  }
+  91.666% {
+    transform: rotate(0deg);
+  }
+  98% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }
