refactor: having a filter by category as a helper func + apply new classname for all tabs component

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,10 @@
   @apply bg-primary;
 }
 
+.tab {
+  @apply min-w-[120px] w-auto sm:min-w-min sm:w-full rounded-full bg-primary/10 sm:bg-transparent;
+}
+
 @layer base {
   * {
     @apply border-border;
