--- a/app/styles/dino.css
+++ b/app/styles/dino.css
@@ -1,3 +1,51 @@
+#dino {
+  pointer-events: none;
+  bottom: 57px;
+  left: 30px;
+}
+
+#dino::before {
+  animation: moveLegsPixels 0.25s steps(1, start) infinite;
+  content: "";
+  pointer-events: none;
+  width: 2.5px;
+  height: 2.5px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 2px;
+  color: var(--color);
+  box-shadow: 11em 0, 12em 0, 13em 0, 14em 0, 15em 0, 16em 0, 17em 0, 18em 0,
+    10em 1em, 11em 1em, 12em 1em, 13em 1em, 14em 1em, 15em 1em, 16em 1em,
+    17em 1em, 18em 1em, 19em 1em, 10em 2em, 11em 2em, 13em 2em, 14em 2em,
+    15em 2em, 16em 2em, 17em 2em, 18em 2em, 19em 2em, 10em 3em, 11em 3em,
+    12em 3em, 13em 3em, 14em 3em, 15em 3em, 16em 3em, 17em 3em, 18em 3em,
+    19em 3em, 10em 4em, 11em 4em, 12em 4em, 13em 4em, 14em 4em, 15em 4em,
+    16em 4em, 17em 4em, 18em 4em, 19em 4em, 10em 5em, 11em 5em, 12em 5em,
+    13em 5em, 14em 5em, 15em 5em, 16em 5em, 17em 5em, 18em 5em, 19em 5em,
+    10em 6em, 11em 6em, 12em 6em, 13em 6em, 14em 6em, 10em 7em, 11em 7em,
+    12em 7em, 13em 7em, 14em 7em, 15em 7em, 16em 7em, 17em 7em, 0em 8em, 9em 8em,
+    10em 8em, 11em 8em, 12em 8em, 13em 8em, 0em 9em, 8em 9em, 9em 9em, 10em 9em,
+    11em 9em, 12em 9em, 13em 9em, 0em 10em, 1em 10em, 6em 10em, 7em 10em,
+    8em 10em, 9em 10em, 10em 10em, 11em 10em, 12em 10em, 13em 10em, 14em 10em,
+    15em 10em, 0em 11em, 1em 11em, 2em 11em, 5em 11em, 6em 11em, 7em 11em,
+    8em 11em, 9em 11em, 10em 11em, 11em 11em, 12em 11em, 13em 11em, 15em 11em,
+    0em 12em, 1em 12em, 2em 12em, 3em 12em, 4em 12em, 5em 12em, 6em 12em,
+    7em 12em, 8em 12em, 9em 12em, 10em 12em, 11em 12em, 12em 12em, 13em 12em,
+    0em 13em, 1em 13em, 2em 13em, 3em 13em, 4em 13em, 5em 13em, 6em 13em,
+    7em 13em, 8em 13em, 9em 13em, 10em 13em, 11em 13em, 12em 13em, 13em 13em,
+    1em 14em, 2em 14em, 3em 14em, 4em 14em, 5em 14em, 6em 14em, 7em 14em,
+    8em 14em, 9em 14em, 10em 14em, 11em 14em, 12em 14em, 2em 15em, 3em 15em,
+    4em 15em, 5em 15em, 6em 15em, 7em 15em, 8em 15em, 9em 15em, 10em 15em,
+    11em 15em, 12em 15em, 3em 16em, 4em 16em, 5em 16em, 6em 16em, 7em 16em,
+    8em 16em, 9em 16em, 10em 16em, 11em 16em, 4em 17em, 5em 17em, 6em 17em,
+    7em 17em, 8em 17em, 9em 17em, 10em 17em, 5em 18em, 6em 18em, 7em 18em,
+    10em 18em, 11em 18em, 5em 19em, 6em 19em, 5em 20em, 5em 21em, 6em 21em;
+}
+
 @keyframes walk {
   0%,
   100% {
@@ -10,12 +58,6 @@
       top left, top left, 0% 2.5vw, top left, top left, 3vw 13vw, 5vw 14.5vw,
       8vw 8vw, 10vw 8.5vw;
   }
-}
-
-#dinosaur {
-  pointer-events: none;
-  bottom: 57px;
-  left: 30px;
 }
 
 @keyframes moveLegsPixels {
@@ -78,46 +120,4 @@
       5em 18em, 10em 18em, 11em 18em, 5em 19em, 6em 19em, 10em 19em, 10em 20em,
       11em 20em;
   }
-}
-
-#dinosaur::before {
-  animation: moveLegsPixels 0.25s steps(1, start) infinite;
-  content: "";
-  pointer-events: none;
-  width: 2.5px;
-  height: 2.5px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-size: 2px;
-  color: var(--color);
-  box-shadow: 11em 0, 12em 0, 13em 0, 14em 0, 15em 0, 16em 0, 17em 0, 18em 0,
-    10em 1em, 11em 1em, 12em 1em, 13em 1em, 14em 1em, 15em 1em, 16em 1em,
-    17em 1em, 18em 1em, 19em 1em, 10em 2em, 11em 2em, 13em 2em, 14em 2em,
-    15em 2em, 16em 2em, 17em 2em, 18em 2em, 19em 2em, 10em 3em, 11em 3em,
-    12em 3em, 13em 3em, 14em 3em, 15em 3em, 16em 3em, 17em 3em, 18em 3em,
-    19em 3em, 10em 4em, 11em 4em, 12em 4em, 13em 4em, 14em 4em, 15em 4em,
-    16em 4em, 17em 4em, 18em 4em, 19em 4em, 10em 5em, 11em 5em, 12em 5em,
-    13em 5em, 14em 5em, 15em 5em, 16em 5em, 17em 5em, 18em 5em, 19em 5em,
-    10em 6em, 11em 6em, 12em 6em, 13em 6em, 14em 6em, 10em 7em, 11em 7em,
-    12em 7em, 13em 7em, 14em 7em, 15em 7em, 16em 7em, 17em 7em, 0em 8em, 9em 8em,
-    10em 8em, 11em 8em, 12em 8em, 13em 8em, 0em 9em, 8em 9em, 9em 9em, 10em 9em,
-    11em 9em, 12em 9em, 13em 9em, 0em 10em, 1em 10em, 6em 10em, 7em 10em,
-    8em 10em, 9em 10em, 10em 10em, 11em 10em, 12em 10em, 13em 10em, 14em 10em,
-    15em 10em, 0em 11em, 1em 11em, 2em 11em, 5em 11em, 6em 11em, 7em 11em,
-    8em 11em, 9em 11em, 10em 11em, 11em 11em, 12em 11em, 13em 11em, 15em 11em,
-    0em 12em, 1em 12em, 2em 12em, 3em 12em, 4em 12em, 5em 12em, 6em 12em,
-    7em 12em, 8em 12em, 9em 12em, 10em 12em, 11em 12em, 12em 12em, 13em 12em,
-    0em 13em, 1em 13em, 2em 13em, 3em 13em, 4em 13em, 5em 13em, 6em 13em,
-    7em 13em, 8em 13em, 9em 13em, 10em 13em, 11em 13em, 12em 13em, 13em 13em,
-    1em 14em, 2em 14em, 3em 14em, 4em 14em, 5em 14em, 6em 14em, 7em 14em,
-    8em 14em, 9em 14em, 10em 14em, 11em 14em, 12em 14em, 2em 15em, 3em 15em,
-    4em 15em, 5em 15em, 6em 15em, 7em 15em, 8em 15em, 9em 15em, 10em 15em,
-    11em 15em, 12em 15em, 3em 16em, 4em 16em, 5em 16em, 6em 16em, 7em 16em,
-    8em 16em, 9em 16em, 10em 16em, 11em 16em, 4em 17em, 5em 17em, 6em 17em,
-    7em 17em, 8em 17em, 9em 17em, 10em 17em, 5em 18em, 6em 18em, 7em 18em,
-    10em 18em, 11em 18em, 5em 19em, 6em 19em, 5em 20em, 5em 21em, 6em 21em;
 }
